--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,10 @@ body{
 button{
   margin-right: 10px;
 }
+a{
+  margin-right: 5px;
+  text-decoration: none;
+  text-transform: capitalize;
+  color: #000;
+  
+}
